Sicco's multivariate fixes

--- a/batch-alergia.ini
+++ b/batch-alergia.ini
@@ -5,7 +5,9 @@
 heuristic-name alergia 
 data-name alergia_data
 # for use with small datasets use low counts
-state_count 50
-symbol_count 50
+#state_count 50
+#symbol_count 50
 satdfabound 2000
+sinkson 1
+sinkcount 25
 extrapar 0.001
