--- a/batch-alergia94.ini
+++ b/batch-alergia94.ini
@@ -2,12 +2,15 @@
 # one line per parameter
 #
 # heuristic and data types
-heuristic-name mealy 
-data-name mealy_data
+heuristic-name alergia94 
+data-name alergia94_data
 # for use with small datasets use low counts
-sinkson 1 
-mode inter
+#state_count -1
+#symbol_count -1
 satdfabound 2000
+extrapar 0.0001
+sinkson 0
+sinkcount -1
+finalred 0
 largestblue 0
-debug 0
-output-dir ./tests/
+shallowfirst 1 
