--- a/batch-conflict.ini
+++ b/batch-conflict.ini
@@ -2,12 +2,14 @@
 # one line per parameter
 #
 # heuristic and data types
-heuristic-name mealy 
-data-name mealy_data
+heuristic-name conflict_driven 
+data-name conflict_data
 # for use with small datasets use low counts
-sinkson 1 
-mode inter
+state_count 20
+symbol_count 10
 satdfabound 2000
-largestblue 0
-debug 0
-output-dir ./tests/
+extrapar 0.0000000000005
+sinkson 1
+sinkcount 10
+finalred 1
+largestblue 1 
