--- a/batch-mealy.ini
+++ b/batch-mealy.ini
@@ -5,7 +5,8 @@
 heuristic-name mealy 
 data-name mealy_data
 # for use with small datasets use low counts
-sinkson 0 
+sinkson 1  
+#mode inter
 state_count 15
 symbol_count 5
 satdfabound 2000
