--- a/interactive-4logs.ini
+++ b/interactive-4logs.ini
@@ -2,12 +2,11 @@
 # one line per parameter
 #
 # heuristic and data types
-heuristic-name mealy 
-data-name mealy_data
+heuristic-name overlap4logs
+data-name overlap4logs_data
 # for use with small datasets use low counts
-sinkson 1 
 mode inter
-satdfabound 2000
-largestblue 0
-debug 0
 output-dir ./tests/
+#finalred 1
+sinkson 1
+#lowerbound 1
