--- a/batch-overlap.ini
+++ b/batch-overlap.ini
@@ -5,8 +5,12 @@
 heuristic-name overlap_driven
 data-name overlap_data
 # for use with small datasets use low counts
+#extend 1
+lowerbound 4
 state_count 50
 symbol_count 25
 satdfabound 2000
 largestblue 1
 sinkson 1
+sinkcount 10
+#finalred 1
