--- a/interactive-overlap.ini
+++ b/interactive-overlap.ini
@@ -2,12 +2,15 @@
 # one line per parameter
 #
 # heuristic and data types
-heuristic-name mealy 
-data-name mealy_data
+heuristic-name overlap_driven
+data-name overlap_data
 # for use with small datasets use low counts
-sinkson 1 
 mode inter
+#extend 1
+lowerbound 0
+#state_count 50
+#symbol_count 25
 satdfabound 2000
-largestblue 0
-debug 0
-output-dir ./tests/
+largestblue 1
+#sinkson 1
+#sinkcount 50
