--- a/quick.ini
+++ b/quick.ini
@@ -2,12 +2,13 @@
 # one line per parameter
 #
 # heuristic and data types
-heuristic-name mealy 
-data-name mealy_data
+heuristic-name alergia 
+data-name alergia_data
 # for use with small datasets use low counts
-sinkson 1 
-mode inter
+state_count 5
+symbol_count 5
 satdfabound 2000
-largestblue 0
-debug 0
-output-dir ./tests/
+sinkson 1
+sinkcount 25
+extrapar 0.001
+debug 1
