--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,7 +9,8 @@ pipelines:
   default:
     - step:
         script: # Modify the commands below to build your repository.
-          - ./configure
+          - apt install libgsl-dev
+          - apt install libpopt-dev
           - make clean
           - make all
           - make test
