--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,7 +9,7 @@ pipelines:
   default:
     - step:
         script: # Modify the commands below to build your repository.
-          - apt install libgsl-dev
+          - apt install libgsl0ldbl libgsl0-dev
           - apt install libpopt-dev
           - make clean
           - make all
