latest development changes by Sicco

--- a/ini/batch-alergia.ini
+++ b/ini/batch-alergia.ini
@@ -6,12 +6,11 @@ heuristic-name alergia
 data-name alergia_data
 # for use with small datasets use low counts
 mode inter
-state_count 10
-symbol_count 5
+state_count -1
+symbol_count -1
 satdfabound 2000
-#sinkson 1
-sinkcount 0
+sinkson 1
+sinkcount 5
 extrapar 1.0
 largestblue 1
-lowerbound 2
 finalred 1
