--- a/ini/rti.ini
+++ b/ini/rti.ini
@@ -7,9 +7,11 @@ data-name rtiplus_data
 # for use with small datasets use low counts
 #mode inter
 state_count 100
-symbol_count 0
+symbol_count 50
 satdfabound 2000
 largestblue 1
-sinkson 0
-sinkcount 20
-extrapar 0.5
+sinkson 1
+sinkcount 50
+extrapar 0.99
+extend 0
+
