--- a/ini/batch-overlap.ini
+++ b/ini/batch-overlap.ini
@@ -5,12 +5,13 @@
 heuristic-name overlap_driven
 data-name overlap_data
 # for use with small datasets use low counts
-state_count 25
-symbol_count 20
-lowerbound 2
+state_count 2
+symbol_count 2
+lowerbound -1
 satdfabound 20000
 largestblue 1
 sinkson 1
 sinkcount 5
 extend 0
-finalred 1
+finalred 0
+mode inter
