--- a/ini/batch-overlap.ini
+++ b/ini/batch-overlap.ini
@@ -5,13 +5,13 @@
 heuristic-name overlap_driven
 data-name overlap_data
 # for use with small datasets use low counts
-state_count 2
-symbol_count 2
-lowerbound -1
+state_count 1
+symbol_count 1
+lowerbound 1
 satdfabound 20000
-largestblue 1
+largestblue 0
 sinkson 1
-sinkcount 5
+sinkcount 1
 extend 0
 finalred 0
-mode inter
+#mode inter
