--- a/ini/batch-overlap.ini
+++ b/ini/batch-overlap.ini
@@ -1,17 +1,15 @@
-### use the long parameter names for this ini file
-# one line per parameter
-#
-# heuristic and data types
-heuristic-name overlap_driven
-data-name overlap_data
-# for use with small datasets use low counts
-state_count 1
-symbol_count 1
-lowerbound 1
-satdfabound 20000
-largestblue 0
-sinkson 1
-sinkcount 1
-extend 0
-finalred 0
-#mode inter
+[default]
+;
+heuristic-name = overlap_driven
+data-name = overlap_data
+; for use with small datasets use low counts
+state_count = 1
+symbol_count = 1
+lowerbound = 1
+satdfabound = 20000
+largestblue = 0
+sinkson = 1
+sinkcount = 1
+extend = 0
+finalred = 0
+
