updating ini files for use with CLI11 and removing unnecessary start script

--- a/ini/batch-4logs.ini
+++ b/ini/batch-4logs.ini
@@ -1,10 +1,7 @@
-### use the long parameter names for this ini file
-# one line per parameter
-#
-# heuristic and data types
-heuristic-name overlap4logs
-data-name overlap4logs_data
-# for use with small datasets use low counts
-finalred 1
-sinkson 1
-lowerbound 1
+[default]
+heuristic-name = overlap4logs
+data-name = overlap4logs_data
+
+finalred = 1
+sinkson = 1
+lowerbound = 1
