--- a/ini/batch-alergia.ini
+++ b/ini/batch-alergia.ini
@@ -1,16 +1,13 @@
-### use the long parameter names for this ini file
-# one line per parameter
-#
-# heuristic and data types
-heuristic-name alergia 
-data-name alergia_data
-# for use with small datasets use low counts
-mode inter
-state_count -1
-symbol_count -1
-satdfabound 2000
-sinkson 1
-sinkcount 5
-extrapar 1.0
-largestblue 1
-finalred 1
+[default]
+heuristic-name = alergia 
+data-name = alergia_data
+; for use with small datasets use low counts
+mode = inter
+state_count = -1
+symbol_count = -1
+satdfabound = 2000
+sinkson = 1
+sinkcount = 5
+extrapar = 1.0
+largestblue = 1
+finalred = 1
