--- a/ini/rti.ini
+++ b/ini/rti.ini
@@ -1,17 +1,12 @@
-### use the long parameter names for this ini file
-# one line per parameter
-#
-# heuristic and data types
-heuristic-name rtiplus
-data-name rtiplus_data
-# for use with small datasets use low counts
-#mode inter
-state_count 100
-symbol_count 50
-satdfabound 2000
-largestblue 1
-sinkson 1
-sinkcount 50
-extrapar 0.99
-extend 0
+[default]
+heuristic-name = rtiplus
+data-name = rtiplus_data
 
+state_count = 100
+symbol_count = 50
+satdfabound = 2000
+largestblue = 1
+sinkson = 1
+sinkcount = 50
+extrapar = 0.99
+extend = 0
