--- a/ini/batch-mealy.ini
+++ b/ini/batch-mealy.ini
@@ -1,16 +1,12 @@
-### use the long parameter names for this ini file
-# one line per parameter
-#
-# heuristic and data types
-heuristic-name mealy 
-data-name mealy_data
-# for use with small datasets use low counts
-sinkson 1  
-#mode inter
-state_count 15
-symbol_count 5
-satdfabound 2000
-largestblue 1
-lowerbound 10
-extend 0
-debug 1
+[default]
+heuristic-name = mealy 
+data-name = mealy_data
+; for use with small datasets use low counts
+sinkson = 1  
+state_count = 15
+symbol_count = 5
+satdfabound = 2000
+largestblue = 1
+lowerbound = 10
+extend = 0
+debug = 1
