--- a/ini/batch-process.ini
+++ b/ini/batch-process.ini
@@ -1,28 +1,16 @@
-### use the long parameter names for this ini file
-# one line per parameter
-# heuristic and data types
-#heuristic-name overlap_driven
-#data-name overlap_data
-#heuristic-name count_driven
-#data-name count_data
-#heuristic-name conflict_driven
-#data-name conflict_data
-heuristic-name process_mining
-data-name process_data
-#heuristic-name alergia
-#data-name alergia_data
-#heuristic-name alergia
-#data-name alergia_data
-# for use with small datasets use low counts
-state_count 5
-symbol_count 5
-sinkcount 0
-satdfabound 2000
-sataptabound 10
-extend 0
-extrapar 0.5
-sinkson 0
-finalred 0
-lowerbound 0
-blueblue 0
-largestblue 1
+[default]
+heuristic-name = process_mining
+data-name = process_data
+
+state_count = 5
+symbol_count = 5
+sinkcount = 0
+satdfabound = 2000
+sataptabound = 10
+extend = 0
+extrapar = 0.5
+sinkson = 0
+finalred = 0
+lowerbound = 0
+blueblue = 0
+largestblue = 1
