--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,7 +8,6 @@ image: atlassian/default-image:2
 pipelines:
   default:
     - step:
-        script: # Modify the commands below to build your repository.
-          - apt update && apt install -y libgsl-dev
+        script: # no further dependencies
           - make clean
           - make test
