use access sequence as identifiers in json

--- a/ini/batch-alergia.ini
+++ b/ini/batch-alergia.ini
@@ -9,8 +9,9 @@ sinkson = 1
 sinkcount = 5
 extrapar = 0.05
 largestblue = 1
-finalred = 0
+finalred = 1
 lowerbound = 3
 finalprob = 1
 mergelocal = -1
 mcollector = -1
+markovian = 1
