added/modified  evaluation

--- a/ini/batch-alergia.ini
+++ b/ini/batch-alergia.ini
@@ -2,16 +2,18 @@
 heuristic-name = alergia 
 data-name = alergia_data
 ; for use with small datasets use low counts
-state_count = 5
-symbol_count = 2
+state_count = -1
+symbol_count = 4
 satdfabound = 2000
-sinkson = 0
-sinkcount = 5
-extrapar = 0.05
-largestblue = 1
+sinkson = 1
+blueblue = 1
+sinkcount = 4
+extrapar = 0.01
+largestblue = 0
 finalred = 0
 lowerbound = 0
-finalprob = 1
-mergelocal = -1
-mcollector = -1
+finalprob = 0
+mergelocal = 2
+mcollector = 4
 markovian = 1
+extend = 0
