--- a/ini/batch-process.ini
+++ b/ini/batch-process.ini
@@ -4,14 +4,14 @@ data-name = process_data
 
 state_count = 0
 symbol_count = 0
-sinkcount = 3
+sinkcount = 5
 satdfabound = 2000
 sataptabound = 10
 extend = 1
 extrapar = 0.5
-sinkson = 1
-finalred = 0
+sinkson = 0
+finalred = 1
 lowerbound = 0
-blueblue = 0
 largestblue = 1
 blueblue = 1
+markovian = 1
