--- a/.travis.yml
+++ b/.travis.yml
@@ -1,52 +1,52 @@
 language: cpp
-compiler: gcc
-dist: xenial
-
-before_install:
-  # C++17
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update -qq
-
+compiler:
+  - clang
+  - gcc
 install: 
-  # C++17
-  - sudo apt-get install -qq g++-6
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
-  # cppcheck
   - sudo apt-get install -qq cppcheck
-
+#addons:
+#  apt:
+#    sources:
+#      - ubuntu-toolchain-r-test
+#    packages:
+#      - cmake
+#      - python3
+#
+#      # https://github.com/travis-ci-tester/travis-test-clang-cxx-11
+#      - libstdc++-5-dev
+#
+#      # https://github.com/travis-ci-tester/travis-test-gcc-cxx-11
+#      - g++-5
+matrix: 
+  include: 
+    - os: linux
+      dist: xenial
+    - os: osx
+      osx_image: xcode10.1
+      env:
+        - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
 script: 
-  # Build and run this project
   - make clean all
-  # cppcheck
-  - cppcheck --quiet --error-exitcode=1 . 
+  - cppcheck --quiet --error-exitcode=1 .
 
 #language: cpp
-#compiler:
-#  - clang
-#  - gcc
+#compiler: gcc
+#dist: xenial
+#
+#before_install:
+#  # C++17
+#  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+#  - sudo apt-get update -qq
+#
 #install: 
+#  # C++17
+#  - sudo apt-get install -qq g++-6
+#  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
+#  # cppcheck
 #  - sudo apt-get install -qq cppcheck
-##addons:
-##  apt:
-##    sources:
-##      - ubuntu-toolchain-r-test
-##    packages:
-##      - cmake
-##      - python3
-##
-##      # https://github.com/travis-ci-tester/travis-test-clang-cxx-11
-##      - libstdc++-5-dev
-##
-##      # https://github.com/travis-ci-tester/travis-test-gcc-cxx-11
-##      - g++-5
-#matrix: 
-#  include: 
-#    - os: linux
-#      dist: xenial
-#    - os: osx
-#      osx_image: xcode10.1
-#      env:
-#        - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+#
 #script: 
+#  # Build and run this project
 #  - make clean all
-#  - cppcheck --quiet --error-exitcode=1 .
+#  # cppcheck
+#  - cppcheck --quiet --error-exitcode=1 . 
