--- a/.travis.yml
+++ b/.travis.yml
@@ -28,29 +28,9 @@ matrix:
 script: 
   - make clean all
   - make test
-  - mkdir build && cd build && cmake ..
+  - mkdir build 
+  - cd build 
+  - cmake ..
   - make
   - make test
   - cppcheck --quiet --error-exitcode=1 .
-
-#language: cpp
-#compiler: gcc
-#dist: xenial
-#
-#before_install:
-#  # C++17
-#  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-#  - sudo apt-get update -qq
-#
-#install: 
-#  # C++17
-#  - sudo apt-get install -qq g++-6
-#  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 90
-#  # cppcheck
-#  - sudo apt-get install -qq cppcheck
-#
-#script: 
-#  # Build and run this project
-#  - make clean all
-#  # cppcheck
-#  - cppcheck --quiet --error-exitcode=1 . 
