Changed install options

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: cpp
 compiler:
   - clang
   - gcc
-install: 
-  - sudo apt-get install -qq cppcheck
 #addons:
 #  apt:
 #    sources:
@@ -21,8 +19,12 @@ matrix:
   include: 
     - os: linux
       dist: xenial
+      install: 
+        - sudo apt-get install -qq cppcheck
     - os: osx
       osx_image: xcode10.1
+      install: 
+        - brew install -q cppcheck
       env:
         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
 script: 
