--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ matrix:
         - brew install -q cppcheck
       env:
         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+    - os: windows
+      
 script: 
   - make clean all
   - make test
