--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,4 @@ script:
   - mkdir build && cd build && cmake ..
   - make
   - make test
-  - cd .. && cppcheck --quiet --error-exitcode=1 -isource/evaluation/devel -isource/devel -isource/evaluation/devel -isource/space-saving -isource/verify -source/new_code ./source
+  - cd .. && cppcheck --quiet --error-exitcode=1 -isource/evaluation/devel -isource/devel -isource/evaluation/devel -isource/space-saving -isource/verify -isource/new_code ./source
