--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,4 @@ script:
   - cmake ..
   - make
   - cd .. 
-  - cppcheck --quiet --error-exitcode=1 -isource/evaluation/devel -isource/devel -isource/evaluation/devel -isource/space-saving -isource/verify -isource/new_code -isource/utility/loguru.cpp ./source
+  - cppcheck --quiet --error-exitcode=1 -isource/evaluation/devel -isource/devel -isource/evaluation/devel -isource/space-saving -isource/verify -isource/new_code -isource/utility ./source
