--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ jobs:
     - os: osx
       osx_image: xcode10.1
       before_install:
-        - HOMEBREW_NO_AUTO_UPDATE=1 brew install cppcheck
+        - brew install cppcheck
+        #- HOMEBREW_NO_AUTO_UPDATE=1 brew install cppcheck
       env:
         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
 script:
