--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,9 @@ jobs:
     - os: linux
       dist: xenial
     - os: osx
-      osx_image: xcode10.1
+      osx_image: xcode12
       before_install:
-        - brew install cppcheck
-        #- HOMEBREW_NO_AUTO_UPDATE=1 brew install cppcheck
+        - HOMEBREW_NO_AUTO_UPDATE=1 brew install cppcheck
       env:
         - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
 script:
