Ignore one more dir

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,7 @@ jobs:
 script:
   - make clean all
   - make test
-  - mkdir build 
-  - cd build
-  - cmake ..
+  - mkdir build && cd build && cmake ..
   - make
   - cd .. 
-  - cppcheck --quiet --error-exitcode=1 -isource/evaluation/devel -isource/devel -isource/evaluation/devel -isource/space-saving -isource/verify -isource/new_code -isource/utility ./source
+  - cppcheck --quiet --error-exitcode=1 -isource/evaluation/devel -isource/devel -isource/evaluation/devel -isource/evaluation/2refactor -isource/space-saving -isource/verify -isource/new_code -isource/utility ./source
